--- a/apps/block_scout_web/lib/block_scout_web/templates/tokens/index.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/tokens/index.html.eex
@@ -35,9 +35,14 @@
 	      </th>
 		  <th class="stakes-table-th">
 			<div class="stakes-table-th-content">
-			<%= gettext "Circulating Market Cap" %>
+			<%= gettext "Token Type" %>
 			</div>
 	      </th>
+		  <!-- th class="stakes-table-th">
+			<div class="stakes-table-th-content">
+			<%= gettext "Circulating Market Cap" %>
+			</div>
+	      </th -->
 	      <th class="stakes-table-th">
 			<div class="stakes-table-th-content">
 			<%= gettext "Total Supply" %>
